fixed text alignment

--- a/src/CreateAccount/CreateAccount.module.scss
+++ b/src/CreateAccount/CreateAccount.module.scss
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Sniglet&display=swap');
 
 .button {
-    background-color: #CDCDCD;
+    background-color: #F0E793;
     border-radius: 90px;
-    color: #FBF29C;
+    color: black;
     border: 0px #838383 solid;
     width: 120px;
     height: 55px;
@@ -25,7 +25,7 @@
 
 .grid {
     display: grid;
-    grid-template-rows: repeat(5, 75px);
+    grid-template-rows: repeat(5, 45px);
     grid-template-columns: repeat(4, 130px);
     grid-template-areas:
         'first first last last'
@@ -121,14 +121,14 @@ label {
     box-shadow: none !important;  
 	margin-top: 20px;
 	height: 50px;
-	padding-left: 20px;
+	padding-left: 10px;
 }
 
 .customInputLabel {
     color: black;
     font-size: 23.4px;
     font-family: 'Sniglet', cursive;
-	margin-left: 20px;
+	margin-left: 10px;
 	margin-top: 15px;
 }
 
